# vinnie

./: .coveragerc  .gitignore  AUTHORS.txt  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  justfile  pyproject.toml  pytest.ini  setup.cfg  setup.py
tests/: conftest.py  test_cli.py  test_options.py  test_testsetup.py  test_vinnie_backends.py  test_vinnie_base.py
tests/files/: README.md
vinnie/: base.py  cli.py  config.py  exceptions.py
vinnie/backends/: __init__.py  base.py  git.py  github.py  gitlab.py
