[project]
name = "vinnie"
version = "0.9.0"
description = "A small utility to handle semantic versioning using only git tags"
readme = "README.md"
authors = [
    {name = "Frank Wiles", email = "frank@revsys.com"}
]
license = {text = "BSD License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "Click>=7.1,<9.0",
    "semver>=2.13.0",
    "GitPython>=3.1.13",
]

[project.optional-dependencies]
test = [
    "pytest==7.1.3",
    "pytest-sugar==0.9.5",
    "pytest-cov==3.0.0",
]

[project.urls]
Homepage = "https://github.com/revsys/vinnie/"
Issues = "https://github.com/revsys/vinine/issues"

[project.scripts]
vinnie = "vinnie.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
addopts = "--cov"
norecursedirs = ".git .eggs build dist docs *.egg-info"
